Refactor config structure and improve playback UI (#23)
* Refactor config structure and improve playback UI

Reorganized configuration into nested sections for game, playback, timing, and UI settings, with migration and upgrade logic. Updated codebase to use new config structure, improved error handling, and enhanced playback UI feedback (e.g., play button state and text). Added 'playing_button_text' translation to all language files. Music player now logs ramping and timing details, clamps speed values, and clears cache on shutdown.

* Display playback speed as integer when possible

Updated speed label to show integer values for playback speed when applicable, improving UI clarity for users adjusting speed.

* Improve play button state management and translations

Refactored play button logic in ProjectLyrica.py for robust state handling (playing, paused, restart, disabled) and dynamic UI updates. Added new translation keys for paused, restart, and pause key hint in all language XML files. Improved playback stop and pause/resume logic, and enhanced logging in music_player.py for playback state changes.

* Swap play button colors in MusicApp UI

* Improve config migration logic and add ramping_info migration

Refactored config upgrade checks to ensure target sections exist before migrating values. Added migration for ramping_info_display_count to new structure. Enhanced default value copying to avoid shared references in config initialization.

--- a/resources/lang/ar_AR.xml
+++ b/resources/lang/ar_AR.xml
@@ -45,6 +45,10 @@
     <translation key="save_button_text">حفظ</translation>
     <translation key="smooth_ramping">الانتقالات السلسة</translation>
     <translation key="smooth_ramping_info">يضبط السرعة بسلاسة في بداية ونهاية الأغنية لانتقالات أكثر طبيعية.</translation>
+    <translation key="playing_button_text">يعمل...</translation>
+    <translation key="paused_button_text">إيقاف مؤقت</translation>
+    <translation key="restart_button_text">إعادة التشغيل؟</translation>
+    <translation key="pause_key_hint">أو استخدم [pause_key]</translation>
     
     <!-- ================= -->
     <!-- معلومات الإصدار -->
