--- a/resources/lang/da_DK.xml
+++ b/resources/lang/da_DK.xml
@@ -45,6 +45,10 @@
     <translation key="save_button_text">Gem</translation>
     <translation key="smooth_ramping">Glatte Overgange</translation>
     <translation key="smooth_ramping_info">Justerer hastigheden blødt i begyndelsen og slutningen af sangen for mere naturlige overgange.</translation>
+    <translation key="playing_button_text">Spiller...</translation>
+    <translation key="paused_button_text">Pauset</translation>
+    <translation key="restart_button_text">Genstarte?</translation>
+    <translation key="pause_key_hint">eller brug [pause_key]</translation>
     
     <!-- ================= -->
     <!-- VERSIONOPLYSNINGER -->
