--- a/resources/lang/ja_JA.xml
+++ b/resources/lang/ja_JA.xml
@@ -45,6 +45,10 @@
     <translation key="save_button_text">保存</translation>
     <translation key="smooth_ramping">スムーズな移行</translation>
     <translation key="smooth_ramping_info">曲の始めと終わりで速度をスムーズに調整し、より自然な移行を実現します。</translation>
+    <translation key="playing_button_text">再生中...</translation>
+    <translation key="paused_button_text">一時停止</translation>
+    <translation key="restart_button_text">再開しますか？</translation>
+    <translation key="pause_key_hint">または [pause_key] を使用してください</translation>
     
     <!-- ================= -->
     <!-- バージョン情報 -->
